--- a/quarto/custom.scss
+++ b/quarto/custom.scss
@@ -2,5 +2,10 @@
 $primary: #00983d !default;
 $pink: $primary !default;
 
+/*-- scss:rules --*/
+div.sourceCode {
+  background-color: rgb(255, 255, 255);
+}
+
 // Make all text justified to both sides
 // $body-text-align: justify !default;
