unfininshed pages done

--- a/quarto/custom.scss
+++ b/quarto/custom.scss
@@ -3,9 +3,9 @@ $primary: #00983d !default;
 $pink: $primary !default;
 
 /*-- scss:rules --*/
-div.sourceCode {
-  background-color: rgb(255, 255, 255);
-}
+// div.sourceCode {
+//   background-color: rgb(255, 255, 255);
+// }
 
 // Make all text justified to both sides
 // $body-text-align: justify !default;
